Added problems page.

--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,4 @@ permalink: /blog/:year/:month/:day/:title
 production_url: http://mrenaud.ca
 
 category-list: [code, cs, editors, math, unix, problems]
+difficulty-levels: [easy, moderate, hard]
