--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ permalink: /blog/:year/:month/:day/:title
 
 production_url: http://mrenaud.ca
 
-category-list: [code, cs, editors, math, unix, problems]
+category-list: [code, cs, editors, math, unix]
 difficulty-levels: [easy, moderate, hard]
