add some image and new seq

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,4 @@ author:
 markdown: rdiscount
 permalink:  none
 production_url: http://lingaoqiming.github.io/
+img_url: http://lingaoqiming.github.io//images
