增加元老人物索引

--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,7 @@ markdown: rdiscount
 permalink:  none
 production_url: http://lingaoqiming.github.io/
 img_url: http://lingaoqiming.github.io//images
+
+collections:
+  characters:
+    output: true
